--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="index-ChqYvwEY.js"></script>
-    <link rel="stylesheet" crossorigin href="index-DiwrgTda.css">
+    <script type="module" crossorigin src="./index-CpR9UU3C.js"></script>
+    <link rel="stylesheet" crossorigin href="./index-DiwrgTda.css">
   </head>
   <body>
-    <div id="root"></div>
-
+    <div id="root"></div>
   </body>
 </html>
